--- a/Entrepaginas/src/main/resources/templates/nuevo-usuario.html
+++ b/Entrepaginas/src/main/resources/templates/nuevo-usuario.html
@@ -132,6 +132,7 @@
           <a th:href="@{/libros}" class="hover:underline">Libros</a>
           <a th:href="@{/categorias}" class="hover:underline">Categorías</a>
           <a th:href="@{/prestamos}" class="hover:underline">Préstamos</a>
+          <a th:href="@{/ventas}" class="hover:underline">Ventas</a>
           <a th:href="@{/perfiles}" class="hover:underline">Perfiles</a>
           <a th:href="@{/catalogos}" class="hover:underline">Catálogo</a>
           <a th:href="@{/logout}" class="hover:underline">Cerrar Sesión</a>
